--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -124,10 +124,10 @@
     <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
     <script>
         const rssUrls = {
-            "GB Hackers": [
+            "Report": [
                 { url: "https://github.com/HackrHub1/Hacker1-Report", title: "Report" },
-                { url: "https://example1.com/article2", title: "GB Hackers Article 2" },
-                { url: "https://example1.com/article3", title: "GB Hackers Article 3" }
+                { url: "https://example1.com/article2", title: "CVE" },
+                { url: "https://example1.com/article3", title: "Tools" }
             ],
             "GB Hackers Comments": [
                 { url: "https://example2.com/comment1", title: "GB Hackers Comment 1" },
