--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -109,7 +109,7 @@
         <p>
             <select id="rss_sites" onchange="checkSelection()">
                 <option value="">Resources Vault</option>
-                <option value="GB Hackers">Report</option>
+                <option value="Report">Report</option>
                 <option value="GB Hackers Comments">GB Hackers Comments</option>
                 <option value="HackRead">HackRead</option>
                 <option value="HackRead Comments">HackRead Comments</option>
