--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -124,7 +124,7 @@
     <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
     <script>
         const rssUrls = {
-            "": [
+            "Report": [
                 { url: "https://github.com/HackrHub1/Hacker1-Report", title: "HackerOne Report" },
                 { url: "https://example1.com/article2", title: "CVE" },
                 { url: "https://example1.com/article3", title: "Tools" }
