--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -126,7 +126,7 @@
         const rssUrls = {
             "Report": [
                 { url: "https://github.com/HackrHub1/Hacker1-Report", title: "HackerOne Report" },
-                { url: "https://example1.com/article2", title: "CVE" },
+                { url: "https://github.com/kabir0104k/CVE_Directory", title: "CVE" },
                 { url: "https://example1.com/article3", title: "Tools" }
             ],
             "GB Hackers Comments": [
